--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,59 @@
 .color-10{
     color: #8987A1;
 }
+
+/* common CSS */
+*{
+    margin: 0;
+    padding: 0;
+}
+.button-style{
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+    background-color:#4E47FF ;
+    padding: 12px 36px;
+    border: none;
+    border-radius: 10px;
+}
+
+/* header */
+
+/* navbar */
+.header-section{
+    margin: 0 auto;
+    height: 698px;
+    background-image: url("../Assets/Hero-bg.png");
+}
+.nav-section{
+    margin: 0 auto;
+    width: 1140px;
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+}
+.nav-text{
+    font-size: 34px;
+    font-weight: 900;
+}
+
+/* banner */
+.banner-content{
+    margin: 0 auto;
+    height: 507px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.banner-text{
+    font-size: 65px;
+    font-weight: 700;
+}
+header div button{
+    margin-top: 37px;
+}
+
+/*  */
