--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,74 @@
 /* fonts */
 
 .inter-inter {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 
 .raleway-raleway {
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 /* text-colors */
-.color-1{
+.color-1 {
     color: rgb(78, 71, 255);
 }
 
-.color-2{
+.color-2 {
     color: rgb(37, 36, 50);
 }
 
-.color-3{
+.color-3 {
     color: rgba(37, 36, 50, 0.5);
 }
 
-.color-4{
+.color-4 {
     color: rgb(255, 255, 255);
 }
 
-.color-5{
+.color-5 {
     color: rgb(0, 0, 0);
 }
-.color-6{
+
+.color-6 {
     color: rgba(30, 30, 30);
 }
-.color-7{
+
+.color-7 {
     color: rgb(117, 117, 117);
 }
-.color-8{
+
+.color-8 {
     color: rgb(179, 179, 179);
 }
 
-.color-9{
+.color-9 {
     color: rgb(0, 0, 0, .5);
 }
-.color-10{
+
+.color-10 {
     color: #8987A1;
 }
 
 /* common CSS */
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.button-style{
+
+body {
+    background-color: #F5F8FF;
+}
+
+.button-style {
     color: white;
     font-size: 16px;
     font-weight: 700;
-    background-color:#4E47FF ;
+    background-color: #4E47FF;
     padding: 12px 36px;
     border: none;
     border-radius: 10px;
@@ -68,27 +77,30 @@
 /* header */
 
 /* navbar */
-.header-section{
+.header-section {
     margin: 0 auto;
     height: 698px;
     background-image: url("../Assets/Hero-bg.png");
+    background-position: center;
 }
-.nav-section{
+
+.nav-section {
     margin: 0 auto;
     width: 1140px;
     height: 150px;
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
 }
-.nav-text{
+
+.nav-text {
     font-size: 34px;
     font-weight: 900;
 }
 
 /* banner */
-.banner-content{
+.banner-content {
     margin: 0 auto;
     height: 507px;
     display: flex;
@@ -96,48 +108,53 @@
     align-items: center;
     justify-content: center;
 }
-.banner-text{
+
+.banner-text {
     font-size: 65px;
     font-weight: 700;
 }
-header div button{
+
+header div button {
     margin-top: 37px;
 }
 
 /* Main Section */
 
-.main-section{
+.main-section {
     max-width: 1140px;
     margin: 0 auto;
 }
 
 /* live preview */
-.live-preview{
+.live-preview {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 116px;
 }
 
-.live-preview-image{
+.live-preview-image {
     border-radius: 48px;
 }
-.live-preview-text-section{
+
+.live-preview-text-section {
     max-width: 517px;
 }
-.live-preview-header{
+
+.live-preview-header {
     font-size: 48px;
     font-weight: 700;
     margin-bottom: 23px;
 }
-.live-preview-text{
+
+.live-preview-text {
     font-size: 24px;
     font-weight: 400;
     margin-bottom: 23px;
 }
 
 /* Brand metrics */
-.brand-metrics{
+.brand-metrics {
     background-color: rgba(78, 71, 255, .1);
     height: 306px;
     margin-top: 116px;
@@ -147,12 +164,13 @@ header div button{
     flex-direction: column;
     border-radius: 24px;
 }
-.brand-header{
+
+.brand-header {
     font-size: 38px;
     font-weight: 700;
 }
 
-.metric-numbers{
+.metric-numbers {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -160,13 +178,72 @@ header div button{
     margin-top: 40px;
 }
 
-.number{
+
+.number {
     font-size: 80px;
     font-weight: 700;
 }
 
-.caption{
+.caption {
     font-size: 20px;
     font-weight: 400;
     text-align: center;
+}
+
+/* User Review */
+.user-review-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 1140px;
+    margin-top: 116px;
+}
+
+.user-review-heading {
+    font-size: 42px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+
+.user-reviews {
+    width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #F5F8FF;
+}
+
+.user-review {
+    background-color: rgba(255, 255, 255, 0.5);
+    max-width: 367px;
+    height: 243px;
+    padding: 24px;
+    border-radius: 14px;
+}
+
+.stars {
+    margin-bottom: 24px;
+}
+
+.reviewer{
+    display: flex;
+    flex-direction: row;
+}
+.reviewer-picture{
+    margin-right: 12px;
+}
+.review-heading {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 8px;
+}
+
+.review-text {
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 318px;
+    margin-bottom: 24px;
 }
