--- a/css/style.css
+++ b/css/style.css
@@ -349,3 +349,33 @@ header div button {
 }
 
 /* footer */
+footer{
+    background-color: white;
+    height: 428px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-header{
+    font-size: 100px;
+    font-weight: 1000;
+    margin-bottom: 18px;
+}
+
+.footer-text{
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    max-width: 531px;
+    text-align: center;
+}
+.footer-links{
+    display: flex;
+    flex-direction: wrap;
+    justify-content: space-around;
+    width: 531px;
+}
+.link{
+    text-decoration: none;
+}
